--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
+annotated-types==0.6.0
+anyio==4.2.0
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==41.0.7
+exceptiongroup==1.2.0
+fastapi==0.108.0
 idna==3.6
 joblib==1.3.2
 lightfm==1.17
 numpy==1.26.3
 pandas==2.1.4
 pdfminer==20191125
+pycparser==2.21
 pycryptodome==3.19.1
+pydantic==2.5.3
+pydantic_core==2.14.6
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 scikit-learn==1.3.2
 scipy==1.11.4
 six==1.16.0
+sniffio==1.3.0
+starlette==0.32.0.post1
 threadpoolctl==3.2.0
+typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
